<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/myBackgroundColor"
    android:padding="10dp">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interstellar_txt"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:id="@+id/title"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/image_1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="left"
            android:layout_margin="18dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/interstellar_pic_1" />


        <ImageView
            android:id="@+id/image_2"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_gravity="right"
            android:layout_margin="50dp"
            android:scaleType="fitXY"
            android:padding="0dp"
            android:src="@mipmap/interstellar_pic_3" />

    </LinearLayout>

    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:text="@string/movie_summary_txt"
        android:textColorHighlight="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="30dp">

        <Button
            android:id="@+id/ticket_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/get_tickets_txt"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/trailer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:backgroundTint="@color/black"
            android:text="@string/trailer_txt"
            android:textAllCaps="false" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:id="@+id/knowledge_btn"
        android:backgroundTint="@color/blue_tan"
        android:text="@string/did_you_know_btn_txt"
        app:icon="@drawable/baseline_question_mark_24"
        android:layoutDirection="rtl"/>

</LinearLayout>